--- a/environment.yml
+++ b/environment.yml
@@ -1,146 +1,349 @@
-name: deepddi
+name: base
 channels:
   - rdkit
-  - conda-forge
+  - pytorch
+  - anaconda
   - defaults
+  - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=0_gnu
-  - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - cairo=1.16.0=h18b612c_1001
-  - certifi=2020.4.5.1=py36h9f0ad1d_0
-  - fontconfig=2.13.1=he4413a7_1000
-  - freetype=2.10.1=he06d7ca_0
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - glib=2.64.2=h6f030ca_0
-  - icu=58.2=hf484d3e_1000
-  - jpeg=9c=h14c3975_1001
-  - ld_impl_linux-64=2.36.1=hea4e1c9_0
-  - libblas=3.8.0=14_openblas
-  - libboost=1.67.0=h46d08c1_4
-  - libcblas=3.8.0=14_openblas
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.2.0=h24d8f2e_2
-  - libgfortran-ng=7.3.0=hdf63c60_5
-  - libgomp=9.2.0=h24d8f2e_2
-  - libiconv=1.15=h516909a_1006
-  - liblapack=3.8.0=14_openblas
-  - libopenblas=0.3.7=h5ec1e0e_6
-  - libpng=1.6.37=hed695b0_1
-  - libstdcxx-ng=9.2.0=hdf63c60_2
-  - libtiff=4.1.0=hc7e4089_6
-  - libuuid=2.32.1=h14c3975_1000
-  - libwebp-base=1.1.0=h516909a_3
-  - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.9=h13577e0_2
-  - lz4-c=1.9.2=he1b5a44_0
-  - ncurses=6.1=hf484d3e_1002
-  - olefile=0.46=py_0
-  - openssl=1.1.1g=h516909a_0
-  - pandas=1.0.3=py36h830a2c2_1
-  - pcre=8.44=he1b5a44_0
-  - pillow=7.1.1=py36h8328e55_0
-  - pip=20.0.2=py_2
-  - pixman=0.38.0=h516909a_1003
-  - pthread-stubs=0.4=h14c3975_1001
-  - py-boost=1.67.0=py36h04863e7_4
-  - python=3.6.10=h8356626_1010_cpython
+  - _ipyw_jlab_nb_ext_conf=0.1.0=py37_0
+  - absl-py=1.0.0=pyhd8ed1ab_0
+  - altair=3.2.0=py37_0
+  - anaconda-client=1.7.2=py37_0
+  - anaconda-navigator=1.9.7=py37_0
+  - appnope=0.1.0=py37_0
+  - asn1crypto=1.3.0=py37_0
+  - asteval=0.9.23=pyhd8ed1ab_0
+  - astor=0.8.1=pyh9f0ad1d_0
+  - attrs=19.3.0=py_0
+  - backcall=0.1.0=py37_0
+  - beautifulsoup4=4.8.2=py37_0
+  - blas=1.0=mkl
+  - bleach=3.1.0=py37_0
+  - blinker=1.4=py_1
+  - bokeh=1.4.0=py37_0
+  - branca=0.3.1=py_0
+  - bzip2=1.0.8=h1de35cc_0
+  - c-ares=1.18.1=h0d85af4_0
+  - ca-certificates=2021.10.8=h033912b_0
+  - cairo=1.14.12=hc4e6be7_4
+  - cctools=895=1
+  - certifi=2021.10.8=py37hf985489_2
+  - cffi=1.13.2=py37hb5b8e2f_0
+  - chardet=3.0.4=py37_1003
+  - clang=4.0.1=1
+  - clang_osx-64=4.0.1=h1ce6c1d_17
+  - clangxx=4.0.1=1
+  - clangxx_osx-64=4.0.1=h22b1bf0_17
+  - click-plugins=1.1.1=py_0
+  - cligj=0.5.0=py37_0
+  - cloudpickle=1.2.2=py_0
+  - clyent=1.2.2=py37_1
+  - compiler-rt=4.0.1=hcfea43d_1
+  - conda=4.12.0=py37hf985489_0
+  - conda-build=3.17.6=py37_0
+  - conda-env=2.6.0=1
+  - conda-package-handling=1.6.0=py37h1de35cc_0
+  - conda-verify=3.1.1=py37_0
+  - cryptography=2.3.1=py37hdbc3d79_0
+  - curl=7.61.1=ha441bb4_0
+  - cycler=0.10.0=py37_0
+  - cython=0.29.13=py37h6de7cb9_0
+  - cytoolz=0.10.1=py37h1de35cc_0
+  - dask=2.10.1=py_0
+  - dask-core=2.10.1=py_0
+  - dbus=1.13.12=h90a0687_0
+  - decorator=4.4.1=py_0
+  - defusedxml=0.6.0=py_0
+  - deprecated=1.2.6=py_0
+  - descartes=1.1.0=py_3
+  - dioptas=0.4.1=py37h82d0005_1002
+  - distributed=2.10.0=py_0
+  - entrypoints=0.3=py37_0
+  - et_xmlfile=1.0.1=py37_0
+  - expat=2.2.6=h0a44026_0
+  - fabio=0.12.0=py37h238668a_0
+  - ffmpeg=4.0=h01ea3c9_0
+  - filelock=3.0.12=py_0
+  - fiona=1.7.12=py37h0dff353_0
+  - folium=0.7.0=py_0
+  - fontconfig=2.13.0=h5d5b041_1
+  - freetype=2.9.1=hb4e5f40_0
+  - freexl=1.0.5=h1de35cc_0
+  - fsspec=0.6.2=py_0
+  - future=0.18.2=py37_0
+  - gast=0.5.3=pyhd8ed1ab_0
+  - gdal=2.2.4=py37h6440ff4_1
+  - geopandas=0.4.1=py_1
+  - geos=3.6.2=h5470d99_2
+  - gettext=0.19.8.1=h15daf44_3
+  - giflib=5.1.4=h1de35cc_1
+  - glib=2.63.1=hd977a24_0
+  - glob2=0.7=py_0
+  - glymur=0.9.4=pyhd8ed1ab_0
+  - google-pasta=0.2.0=pyh8c360ce_0
+  - graphite2=1.3.13=h2098e52_0
+  - grpcio=1.16.0=py37h9011c5e_1000
+  - h5py=2.8.0=py37h878fce3_3
+  - harfbuzz=1.8.8=hb8d4a28_0
+  - hdf4=4.2.13=h39711bb_2
+  - hdf5=1.10.2=hfa1e0ec_1
+  - heapdict=1.0.1=py_0
+  - icu=58.2=h4b95b61_1
+  - idna=2.8=py37_0
+  - ijson=2.5.1=py_0
+  - imageio=2.8.0=py_0
+  - importlib-metadata=4.11.3=py37hf985489_1
+  - importlib_metadata=1.5.0=py37_0
+  - inflect=4.1.0=py37_0
+  - intel-openmp=2019.4=233
+  - ipykernel=5.1.4=py37h39e3cac_0
+  - ipython=7.12.0=py37h5ca1d4c_0
+  - ipython_genutils=0.2.0=py37_0
+  - ipywidgets=7.5.1=py_0
+  - jaraco.itertools=5.0.0=py_0
+  - jasper=2.0.14=h636a363_1
+  - jdcal=1.4.1=py_0
+  - jedi=0.16.0=py37_0
+  - jinja2=2.11.1=py_0
+  - jpeg=9b=he5867d9_2
+  - json-c=0.13.1=h3efe00b_0
+  - json5=0.9.0=py_0
+  - jsonschema=3.2.0=py37_0
+  - jupyter_client=5.3.4=py37_0
+  - jupyter_core=4.6.1=py37_0
+  - jupyterlab=1.2.6=pyhf63ae98_0
+  - jupyterlab_server=1.0.6=py_0
+  - kealib=1.4.7=h40e48e4_6
+  - keras=2.3.1=py37_0
+  - keras-applications=1.0.8=py_1
+  - keras-preprocessing=1.1.2=pyhd8ed1ab_0
+  - kiwisolver=1.1.0=py37h0a44026_0
+  - krb5=1.16.1=h24a3359_6
+  - ld64=274.2=1
+  - libarchive=3.3.3=h786848e_5
+  - libboost=1.67.0=hebc422b_4
+  - libcurl=7.61.1=hf30b1f0_0
+  - libcxx=4.0.1=hcfea43d_1
+  - libcxxabi=4.0.1=hcfea43d_1
+  - libdap4=3.19.1=h3d3e54a_0
+  - libedit=3.1.20181209=hb402a30_0
+  - libffi=3.2.1=h475c297_4
+  - libgdal=2.2.4=h7b1ea53_1
+  - libgfortran=3.0.1=h93005f0_2
+  - libgpuarray=0.7.6=h0d85af4_1003
+  - libiconv=1.15=hdd342a3_7
+  - libkml=1.3.0=hbe12b63_4
+  - liblief=0.9.0=h2a1bed3_2
+  - libnetcdf=4.6.1=h4e6abe9_2
+  - libopencv=3.4.2=h7c891bd_1
+  - libopus=1.3=h1de35cc_0
+  - libpng=1.6.37=ha441bb4_0
+  - libpq=10.5=hf30b1f0_0
+  - libprotobuf=3.9.2=hfbae3c0_0
+  - libsodium=1.0.16=h3efe00b_0
+  - libspatialindex=1.9.3=h0a44026_0
+  - libspatialite=4.3.0a=ha12ebda_19
+  - libssh2=1.8.0=h322a93b_4
+  - libtiff=4.1.0=hcb84e12_0
+  - libuuid=1.0.3=h6bb4b03_2
+  - libvpx=1.7.0=h378b8a2_0
+  - libxml2=2.9.9=hf6e021a_1
+  - libxslt=1.1.33=h33a18ac_0
+  - llvm=4.0.1=1
+  - llvm-lto-tapi=4.0.1=1
+  - lmfit=1.0.2=pyhd8ed1ab_0
+  - locket=0.2.0=py37_1
+  - lxml=4.5.1=py37h63b7cb6_0
+  - lz4-c=1.8.1.2=h1de35cc_0
+  - lzo=2.10=h362108e_2
+  - mako=1.1.4=pyhd3eb1b0_0
+  - mapclassify=2.1.1=py_0
+  - markdown=3.3.7=pyhd8ed1ab_0
+  - markupsafe=1.1.1=py37h1de35cc_0
+  - matplotlib=3.1.3=py37_0
+  - matplotlib-base=3.1.3=py37h9aa3819_0
+  - mistune=0.8.4=py37h1de35cc_0
+  - mkl=2019.4=233
+  - mkl-service=2.3.0=py37hfbe908c_0
+  - mkl_fft=1.0.15=py37h5e564d8_0
+  - mkl_random=1.1.0=py37ha771720_0
+  - more-itertools=8.2.0=py_0
+  - msgpack-python=0.6.1=py37h04f5b5a_1
+  - munch=2.5.0=py_0
+  - navigator-updater=0.2.1=py37_0
+  - nbconvert=5.6.1=py37_0
+  - nbformat=5.0.4=py_0
+  - ncurses=6.1=h0a44026_1
+  - networkx=2.4=py_0
+  - ninja=1.9.0=py37h04f5b5a_0
+  - notebook=5.7.8=py37_0
+  - numpy-base=1.18.1=py37h3304bdc_1
+  - oauthlib=3.0.1=py_0
+  - olefile=0.46=py37_0
+  - opencv=3.4.2=py37h6fd60c2_1
+  - openjpeg=2.3.0=hb95cd4c_1
+  - openpyxl=3.0.3=py_0
+  - openssl=1.0.2u=h0b31af3_0
+  - packaging=20.1=py_0
+  - pandas=1.0.0=py37h6c726b0_0
+  - pandas-datareader=0.9.0=py_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py37_1
+  - parso=0.6.0=py_0
+  - partd=1.1.0=py_0
+  - patsy=0.5.1=py37_0
+  - pcre=8.43=h0a44026_0
+  - pdfrw=0.4=pyhd8ed1ab_2
+  - pexpect=4.8.0=py37_0
+  - pickleshare=0.7.5=py37_0
+  - pillow=7.1.2=py37h4655f20_0
+  - pip=20.0.2=py37_1
+  - pixman=0.38.0=h1de35cc_0
+  - pkginfo=1.5.0.1=py37_0
+  - poppler=0.65.0=ha097c24_1
+  - poppler-data=0.4.9=0
+  - portaudio=19.6.0=h647c56a_4
+  - proj4=5.0.1=h1de35cc_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=3.0.3=py_0
+  - psutil=5.6.7=py37h1de35cc_0
+  - ptyprocess=0.6.0=py37_0
+  - py-boost=1.67.0=py37h6440ff4_4
+  - py-lief=0.9.0=py37h1413db1_2
+  - py-opencv=3.4.2=py37h7c891bd_1
+  - pyaudio=0.2.11=py37h1de35cc_2
+  - pycifrw=4.4.1=py37h60d8a13_2
+  - pycocotools=2.0.2=py37h60d8a13_1
+  - pycosat=0.6.3=py37h1de35cc_0
+  - pycparser=2.19=py37_0
+  - pycurl=7.43.0.2=py37hdbc3d79_0
+  - pyfai=0.18.0=py37h86efe34_1
+  - pygments=2.5.2=py_0
+  - pygpu=0.7.6=py37h9f9e6dc_1002
+  - pyjwt=1.7.1=py_0
+  - pymongo=3.9.0=py37h0a44026_0
+  - pymysql=0.9.3=py37_0
+  - pyopenssl=19.0.0=py37_0
+  - pyparsing=2.4.6=py_0
+  - pyproj=1.9.5.1=py37h833a5d7_1
+  - pyqt=5.9.2=py37h655552a_2
+  - pyqtgraph=0.11.0=py_0
+  - pyrsistent=0.15.7=py37h1de35cc_0
+  - pysocks=1.7.1=py37_0
+  - python=3.7.0=hc167b69_0
   - python-dateutil=2.8.1=py_0
-  - python_abi=3.6=1_cp36m
+  - python-libarchive-c=2.8=py37_13
+  - python-sounddevice=0.3.15=pyh8c360ce_0
+  - python-twitter=3.5=py_0
+  - python-utils=2.3.0=py_1
+  - python.app=2=py37_9
+  - python_abi=3.7=1_cp37m
+  - pytorch=1.1.0=py3.7_0
   - pytz=2019.3=py_0
-  - rdkit=2020.03.1.0=py36hc20afe1_1
-  - readline=8.0=hf8c457e_0
-  - setuptools=46.1.3=py36h9f0ad1d_0
-  - six=1.14.0=py_1
-  - sqlite=3.30.1=hcee41ef_0
-  - tk=8.6.10=hed695b0_0
-  - wheel=0.34.2=py_1
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.9=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.5=h516909a_0
-  - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.4=h6597ccf_3
+  - pywavelets=1.1.1=py37h1de35cc_0
+  - pyyaml=5.3=py37h1de35cc_0
+  - pyzmq=18.1.1=py37h0a44026_0
+  - qt=5.9.7=h468cd18_1
+  - qtconsole=5.1.1=pyhd3eb1b0_0
+  - qtpy=1.9.0=py_0
+  - rdkit=2020.03.2.0=py37h65625ec_1
+  - readline=7.0=h1de35cc_5
+  - requests=2.22.0=py37_1
+  - requests-oauthlib=1.2.0=py_0
+  - rtree=0.9.3=py37_0
+  - ruamel_yaml=0.15.87=py37h1de35cc_0
+  - scikit-image=0.16.2=py37h6c726b0_0
+  - scikit-learn=0.20.1=py37h27c97d8_0
+  - scipy=1.3.1=py37h1410ff5_0
+  - seaborn=0.9.0=py37_0
+  - send2trash=1.5.0=py37_0
+  - setuptools=45.1.0=py37_0
+  - shapely=1.6.4=py37h20de77a_0
+  - silx=0.11.0=py37h86efe34_0
+  - sip=4.19.8=py37h0a44026_0
+  - six=1.14.0=py37_0
+  - sortedcontainers=2.1.0=py37_0
+  - soupsieve=1.9.5=py37_0
+  - sqlite=3.31.1=ha441bb4_0
+  - statsmodels=0.11.0=py37h1de35cc_0
+  - tblib=1.6.0=py_0
+  - tensorboard=1.14.0=py37_0
+  - tensorflow=1.14.0=h3cdfc77_0
+  - tensorflow-base=1.14.0=py37hc8dfbb8_0
+  - tensorflow-estimator=1.14.0=py37h5ca1d4c_0
+  - termcolor=1.1.0=py_2
+  - terminado=0.8.3=py37_0
+  - testpath=0.4.4=py_0
+  - theano=1.0.4=py37h0a44026_1000
+  - tk=8.6.8=ha441bb4_0
+  - toolz=0.10.0=py_0
+  - torchvision=0.3.0=py37_cuNone_1
+  - tornado=6.0.3=py37h1de35cc_0
+  - tqdm=4.42.0=py_0
+  - traitlets=4.3.3=py37_0
+  - typing_extensions=4.2.0=pyha770c72_1
+  - uncertainties=3.1.6=pyhd8ed1ab_0
+  - urllib3=1.25.8=py37_0
+  - vincent=0.4.4=py_1
+  - wcwidth=0.1.8=py_0
+  - webencodings=0.5.1=py37_1
+  - werkzeug=2.1.2=pyhd8ed1ab_1
+  - wget=1.19.5=hf30b1f0_0
+  - wheel=0.34.2=py37_0
+  - widgetsnbextension=3.5.1=py37_0
+  - wrapt=1.11.2=py37h1de35cc_0
+  - xerces-c=3.2.2=h44e365a_0
+  - xlrd=1.2.0=py37_0
+  - xz=5.2.4=h1de35cc_4
+  - yaml=0.1.7=hc338f04_2
+  - zeromq=4.3.1=h0a44026_3
+  - zict=1.0.0=py_0
+  - zipp=2.1.0=py_0
+  - zlib=1.2.11=h1de35cc_3
+  - zstd=1.3.7=h5bba6e5_0
   - pip:
-    - absl-py==0.9.0
-    - astor==0.8.1
-    - attrs==19.3.0
-    - backcall==0.1.0
-    - bleach==3.1.4
-    - cloudpickle==1.3.0
-    - decorator==4.4.2
-    - defusedxml==0.6.0
-    - entrypoints==0.3
-    - future==0.18.2
-    - gast==0.3.3
-    - grpcio==1.28.1
-    - h5py==2.10.0
-    - hyperas==0.4.1
-    - hyperopt==0.2.3
-    - importlib-metadata==1.6.0
-    - ipykernel==5.2.1
-    - ipython==7.13.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.5.1
-    - jedi==0.17.0
-    - jinja2==2.11.2
-    - joblib==0.14.1
-    - jsonschema==3.2.0
-    - jupyter==1.0.0
-    - jupyter-client==6.1.3
-    - jupyter-console==6.1.0
-    - jupyter-core==4.6.3
-    - keras==2.3.1
-    - keras-applications==1.0.8
-    - keras-preprocessing==1.1.0
-    - markdown==3.2.1
-    - markupsafe==1.1.1
-    - mistune==0.8.4
-    - mock==4.0.2
-    - nbconvert==5.6.1
-    - nbformat==5.0.6
-    - networkx==2.2
-    - notebook==6.0.3
-    - numpy==1.16.6
-    - pandocfilters==1.4.2
-    - parso==0.7.0
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
-    - prometheus-client==0.7.1
-    - prompt-toolkit==3.0.5
-    - protobuf==3.11.3
-    - ptyprocess==0.6.0
-    - pygments==2.6.1
-    - pyrsistent==0.16.0
-    - pyyaml==5.3.1
-    - pyzmq==19.0.0
-    - qtconsole==4.7.3
-    - qtpy==1.9.0
-    - scikit-learn==0.22.2.post1
-    - scipy==1.4.1
-    - send2trash==1.5.0
-    - sklearn==0.0
-    - tensorboard==1.13.1
-    - tensorflow==1.13.1
-    - tensorflow-estimator==1.13.0
-    - termcolor==1.1.0
-    - terminado==0.8.3
-    - testpath==0.4.4
-    - tornado==6.0.4
-    - tqdm==4.45.0
-    - traitlets==4.3.3
-    - wcwidth==0.1.9
-    - webencodings==0.5.1
-    - werkzeug==1.0.1
-    - widgetsnbextension==3.5.1
-    - zipp==3.1.0
-prefix: /data/yjkim/anaconda3/envs/deepddi
+    - atomicwrites==1.4.0
+    - babypandas==0.1.6
+    - backtrader==1.9.76.123
+    - boto==2.49.0
+    - boto3==1.11.7
+    - botocore==1.14.7
+    - cachetools==4.2.4
+    - click==8.0.3
+    - dill==0.3.1.1
+    - docutils==0.15.2
+    - emd-signal==0.2.7
+    - gensim==3.8.1
+    - google-api-core==2.3.2
+    - google-api-python-client==2.34.0
+    - google-auth==2.3.3
+    - google-auth-httplib2==0.1.0
+    - google-auth-oauthlib==0.4.6
+    - googleapis-common-protos==1.54.0
+    - gspread==5.1.1
+    - httplib2==0.20.2
+    - jmespath==0.9.4
+    - multiprocess==0.70.9
+    - numpy==1.18.1
+    - otter-grader==3.2.1
+    - pathos==0.2.5
+    - pdfkit==1.0.0
+    - pluggy==0.13.1
+    - pox==0.2.7
+    - ppft==1.6.6.1
+    - protobuf==3.19.1
+    - py==1.8.1
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pydantic==1.9.0
+    - pypdf2==1.26.0
+    - pytest==4.6.3
+    - python-on-whales==0.34.0
+    - rsa==4.8
+    - s3transfer==0.3.1
+    - smart-open==1.9.0
+    - typer==0.4.0
+    - typing-extensions==4.0.1
+    - tzlocal==2.1
+    - uritemplate==4.1.1
